# Game-sfml

./: .gitignore  CMakeLists.txt  Game-sfml.sln  README.md
Game-sfml/: Ai.cpp  Ai.h  Config.h  EventHandler.cpp  EventHandler.h  Figure.cpp  Figure.h  Game-sfml.vcxproj  Game-sfml.vcxproj.filters  Game.cpp  Game.h  GameView.cpp  GameView.h  Player.cpp  Player.h  main.cpp
